# p2m

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  rustfmt.toml
.github/workflows/: cd.yml  rust-publish.yml
p2m/: Cargo.toml
p2m-cli/: Cargo.toml
p2m-cli/src/: main.rs
p2m/src/: error.rs  lib.rs  options.rs  quality.rs  types.rs
p2m/src/extract/: layout.rs  mod.rs  side_by_side.rs  text.rs
p2m/src/extract/layout/: columns.rs  lines.rs  mod.rs  spanning.rs
p2m/src/markdown/: analysis.rs  classify.rs  convert.rs  mod.rs  postprocess.rs  preprocess.rs
p2m/src/pdf/: content_stream.rs  fonts.rs  glyph_names.rs  links.rs  mod.rs  structure_tree.rs  tounicode.rs  xobjects.rs
p2m/src/table/: detect_heuristic.rs  detect_lines.rs  detect_rects.rs  detect_struct.rs  financial.rs  format.rs  grid.rs  mod.rs  mod.rs.ref
p2m/src/tables/: detect_heuristic.rs  detect_lines.rs  detect_rects.rs  detect_struct.rs  financial.rs  format.rs  grid.rs  mod.rs
p2m/src/text/: bidi.rs  cjk.rs  mod.rs  spacing.rs  unicode.rs
