[package]
name = "p2m-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "p2m"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
p2m = { path = "../p2m" }

[lints]
workspace = true
